objects/Expense__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>BAA Management Only</fullName>
            </value>
            <value>
                <fullName>Building Access Management Only</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>Cloud Virtual Data Center</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Conduit</fullName>
            </value>
            <value>
                <fullName>Cross Connects</fullName>
            </value>
            <value>
                <fullName>Custom Bundle</fullName>
            </value>
            <value>
                <fullName>Custom Wavelength</fullName>
            </value>
            <value>
                <fullName>Dedicated Wavelength</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>Entrance Fiber</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Gigabit Ethernet</fullName>
            </value>
            <value>
                <fullName>Intra-Building Riser</fullName>
            </value>
            <value>
                <fullName>IP Transit</fullName>
            </value>
            <value>
                <fullName>ISP Master Design</fullName>
            </value>
            <value>
                <fullName>Lateral</fullName>
            </value>
            <value>
                <fullName>Multi-pt to Multi-pt</fullName>
            </value>
            <value>
                <fullName>NCC Monitoring Only</fullName>
            </value>
            <value>
                <fullName>Point to Point</fullName>
            </value>
            <value>
                <fullName>Point-to-Point</fullName>
            </value>
            <value>
                <fullName>Power Only</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Pt to Multi-Pt (NNI)</fullName>
            </value>
            <value>
                <fullName>Pt to Multi-Pt (UNI)</fullName>
            </value>
            <value>
                <fullName>Remote Hands</fullName>
            </value>
            <value>
                <fullName>Remote Hands Services Only</fullName>
            </value>
            <value>
                <fullName>Ring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>