objects/Expense__c/fields/Rack_Depth__c.field-meta.xml
<CustomField>
    <fullName>Rack_Depth__c</fullName>
    <label>Cabinet/Rack Depth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>34&quot;</fullName>
            </value>
            <value>
                <fullName>36&quot;</fullName>
            </value>
            <value>
                <fullName>42&quot;</fullName>
            </value>
            <value>
                <fullName>1000 mm</fullName>
            </value>
            <value>
                <fullName>1100 mm</fullName>
            </value>
            <value>
                <fullName>1200 mm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>