objects/Expense__c/fields/Requesting_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Product_Group__c</fullName>
    <description>TTN-0000736453 - Product Group requesting the Expense, could differ from the actual Product Group</description>
    <inlineHelpText>Product Group requesting the Expense, could differ from the actual Product Group</inlineHelpText>
    <label>Requesting Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Dark Fiber - Long Haul</fullName>
            </value>
            <value>
                <fullName>Dark Fiber - Metro</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>FTT - Dark Fiber</fullName>
            </value>
            <value>
                <fullName>FTT - Ethernet</fullName>
            </value>
            <value>
                <fullName>FTT - Small Cell</fullName>
            </value>
            <value>
                <fullName>FTT - SONET</fullName>
            </value>
            <value>
                <fullName>FTT - Wavelengths</fullName>
            </value>
            <value>
                <fullName>IP Services</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Managed WAN-LAN</fullName>
            </value>
            <value>
                <fullName>Media &amp; Gaming</fullName>
            </value>
            <value>
                <fullName>SONET</fullName>
            </value>
            <value>
                <fullName>Wavelengths</fullName>
            </value>
            <value>
                <fullName>Wavelengths - Long Haul</fullName>
            </value>
            <value>
                <fullName>Wavelengths - Metro</fullName>
            </value>
            <value>
                <fullName>zColo</fullName>
            </value>
            <value>
                <fullName>zTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>