objects/Expense__c/fields/Room_Z__c.field-meta.xml
<CustomField>
    <fullName>Room_Z__c</fullName>
    <label>Room Z</label>
    <length>20</length>
    <type>Text</type>
</CustomField>