objects/Expense__c/fields/SECCFA__c.field-meta.xml
<CustomField>
    <fullName>SECCFA__c</fullName>
    <label>SECCFA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>