objects/Expense__c/fields/Service_A_Location_Component_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_A_Location_Component_Text__c</fullName>
    <label>Service A Location Component Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>