objects/Expense__c/fields/Service_Location_A_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_A_Text__c</fullName>
    <label>Service Location A Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>