objects/Expense__c/fields/Service_Location_Z_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Z_Text__c</fullName>
    <label>Service Location Z Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>