objects/Expense__c/fields/Service_Order_Componet__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Componet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Order Componet</label>
    <referenceTo>Allstream_Service_Order_Item__c</referenceTo>
    <relationshipName>Zayo_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>