objects/Expense__c/fields/T_Net_MRC__c.field-meta.xml
<CustomField>
    <fullName>T_Net_MRC__c</fullName>
    <description>Rollup of Triple Net (T-Net) costs from the Expense Item level. Used to calculate Yearly Base + T-Net Cost / SF.</description>
    <inlineHelpText>T-Net Costs -&gt; Additional Rent, CAM, Insurance, Other Facilities Expense, Parking, RE Tax.</inlineHelpText>
    <label>T-Net MRC</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>