objects/Expense__c/fields/Temp_ID__c.field-meta.xml
<CustomField>
    <fullName>Temp_ID__c</fullName>
    <description>ID to keep track of the SF.com ID assigned to this Netx before deleting them all and re-adding in order to get new auto IDs assigned.  Can be deleted after 03/2009</description>
    <label>Temp ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>