objects/Expense__c/fields/Type_of_Rail__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rail__c</fullName>
    <label>Type of Rail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>Tapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>