objects/Expense__c/fields/Vendor_Account_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Dropdown__c</fullName>
    <label>Vendor Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMT | AM TELECOM COMMUNICATIONS</fullName>
            </value>
            <value>
                <fullName>ATT | AT&amp;T</fullName>
            </value>
            <value>
                <fullName>BEA | BEANFIELD TECHNOLOGIES INC</fullName>
            </value>
            <value>
                <fullName>BEL | BELL</fullName>
            </value>
            <value>
                <fullName>CCI | COGENT COMMUNICATIONS INC</fullName>
            </value>
            <value>
                <fullName>COG | COGECO</fullName>
            </value>
            <value>
                <fullName>COL | COLONY NETWORKS INC.</fullName>
            </value>
            <value>
                <fullName>CTB | CITY OF THUNDER BAY</fullName>
            </value>
            <value>
                <fullName>CTW | CITYWEST</fullName>
            </value>
            <value>
                <fullName>CYP | CYPRESS SOLUTIONS INC.</fullName>
            </value>
            <value>
                <fullName>EAS | EASTLINK</fullName>
            </value>
            <value>
                <fullName>EQC | EQUINIX CANADA LTD.</fullName>
            </value>
            <value>
                <fullName>EST | eSTRUXTURE DATA CENTERS</fullName>
            </value>
            <value>
                <fullName>FIB | FIBRENOIRE</fullName>
            </value>
            <value>
                <fullName>GCP | GC PIVOTAL, LLC</fullName>
            </value>
            <value>
                <fullName>HOR | HORRY TELEPHONE COLLECTIVE</fullName>
            </value>
            <value>
                <fullName>HRB | HARBOUR CENTRE</fullName>
            </value>
            <value>
                <fullName>IBM | IBM CANADA LTD</fullName>
            </value>
            <value>
                <fullName>IRT | IRISTEL INC</fullName>
            </value>
            <value>
                <fullName>LV3 | LEVEL 3 COMMUNICATIONS</fullName>
            </value>
            <value>
                <fullName>MCI | MCI INTERNATIONAL INC</fullName>
            </value>
            <value>
                <fullName>NEU | NEUSTAR, INC</fullName>
            </value>
            <value>
                <fullName>NOR | NORTHERN TELEPHONE LTD</fullName>
            </value>
            <value>
                <fullName>NRT | NORTH RENFREW TELEPHONE CO. LTD.</fullName>
            </value>
            <value>
                <fullName>NWT | NORTHWESTEL INC</fullName>
            </value>
            <value>
                <fullName>ONN | ONNET</fullName>
            </value>
            <value>
                <fullName>ONT | ONTERA</fullName>
            </value>
            <value>
                <fullName>QUE | QUESTZONES.NET INC</fullName>
            </value>
            <value>
                <fullName>QWE | QWEST</fullName>
            </value>
            <value>
                <fullName>ROG | ROGERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>