objects/Expense__c/fields/Vendor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Name__c</fullName>
    <label>Vendor Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>