objects/Expense__c/fields/Vendor_Account_Old_Reference__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Old_Reference__c</fullName>
    <label>Vendor Account Old Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>