objects/Expense__c/fields/Vendor_FOC_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_FOC_Date__c</fullName>
    <description>Enter the Firm Order Committment (FOC) date received from the Vendor here</description>
    <inlineHelpText>Enter the Firm Order Committment (FOC) date received from the Vendor here</inlineHelpText>
    <label>Vendor FOC Date</label>
    <type>Date</type>
</CustomField>