objects/Expense__c/fields/Vendor_PON__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PON__c</fullName>
    <label>Vendor PON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>