objects/Expense__c/fields/Vendor_PON_Disconnect__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PON_Disconnect__c</fullName>
    <label>Vendor PON - Disconnect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>