objects/Expense__c/fields/Z_Extended_DMARC_Required__c.field-meta.xml
<CustomField>
    <fullName>Z_Extended_DMARC_Required__c</fullName>
    <label>Z Extended DMARC Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>