objects/Expense__c/fields/Z_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Z_Handoff__c</fullName>
    <label>Z Handoff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS1 (Electrical)</fullName>
            </value>
            <value>
                <fullName>DS3 (Coax)</fullName>
            </value>
            <value>
                <fullName>FastE (Cat5)</fullName>
            </value>
            <value>
                <fullName>2-fiber (optical)</fullName>
            </value>
            <value>
                <fullName>4-fiber (optical)</fullName>
            </value>
            <value>
                <fullName>Multi-fiber (optical)</fullName>
            </value>
            <value>
                <fullName>2-fiber OC-3</fullName>
            </value>
            <value>
                <fullName>4-fiber OC-3</fullName>
            </value>
            <value>
                <fullName>2-fiber OC-12</fullName>
            </value>
            <value>
                <fullName>4-fiber OC-12</fullName>
            </value>
            <value>
                <fullName>2-fiber OC-48</fullName>
            </value>
            <value>
                <fullName>4-fiber OC-48</fullName>
            </value>
            <value>
                <fullName>2-fiber OC-192</fullName>
            </value>
            <value>
                <fullName>4-fiber OC-192</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>