objects/Expense__c/fields/Z_Handoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Z_Handoff_Notes__c</fullName>
    <label>Z Handoff Notes</label>
    <type>TextArea</type>
</CustomField>