objects/Expense__c/fields/Z_Loc_Entrance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Z_Loc_Entrance_Requirement__c</fullName>
    <label>Z Loc Entrance Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>