objects/Expense__c/fields/Zayo_Infrastructure_ID__c.field-meta.xml
<CustomField>
    <fullName>Zayo_Infrastructure_ID__c</fullName>
    <label>Zayo Infrastructure ID</label>
    <length>53</length>
    <type>Text</type>
</CustomField>