objects/Expense__c/fields/Zip_A__c.field-meta.xml
<CustomField>
    <fullName>Zip_A__c</fullName>
    <label>Zip A</label>
    <length>10</length>
    <type>Text</type>
</CustomField>