objects/Expense__c/recordTypes/NetEx.recordType-meta.xml
<RecordType>
    <fullName>NetEx</fullName>
    <active>true</active>
    <label>NetEx</label>
</RecordType>