objects/Expense__c/listViews/Netex_Service.listView-meta.xml
<ListView>
    <fullName>Netex_Service</fullName>
    <columns>Netex_Service__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Vendor_Circuit_Id__c</columns>
    <columns>Service_Text__c</columns>
    <columns>NAME</columns>
    <columns>Netx_MRC__c</columns>
    <columns>Address_A__c</columns>
    <columns>City_A__c</columns>
    <columns>State_A__c</columns>
    <columns>Address_Z__c</columns>
    <columns>City_Z__c</columns>
    <columns>State_Z__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Netx_MRC__c</field>
        <operation>greaterOrEqual</operation>
        <value>2500</value>
    </filters>
    <filters>
        <field>Netex_Type__c</field>
        <operation>notEqual</operation>
        <value>remove</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>Wavelengths</value>
    </filters>
    <filters>
        <field>Netex_Service__c</field>
        <operation>equals</operation>
        <value>2.5G wave,10G wave,Fiber lease,Ethernet 1000Mb,Ethernet 10G</value>
    </filters>
    <label>Wave NetEx Optimization - Iuzzini</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>